Bug 633762. Only bail early if we have an async scroll pending so the ScrollTo call can update mDestination. r=roc a=roc